# sba-framework

./: .gitignore  CODEBASE_INVENTORY.md  CODEBASE_INVENTORY_SUMMARY.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_RESPONSE_TO_USER.md  IMPLEMENTATION_ROADMAP.md  PHASE_2_5_IMPLEMENTATION_STATUS.md  PHASE_5_COMPLETION_CHECKLIST.md  PHASE_5_COMPLETION_VERIFIED.md  README.md  SBA_Phase0_Verify.ps1  TESTING.md  Test-Phase0.ps1  Test-Phase1.ps1  Test-Phase2.ps1  Test-Phase3.ps1  file_tree.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_install.txt  requirements_utf8.txt  run_tests.ps1  sba_config.yaml  test_blank_template.py  test_brain_package.py  test_result.txt  test_result_20260403_1209.txt  test_results.txt  test_single_cycle.py
.claude/: settings.local.json
data/: api_usage.db  schema.sql
data/qdrant_storage/: raft_state.json
docs/: blank_template_structure.md
docs/spec/: 00.設定書類一覧.md  01.SBA総合基本設計書.md  02.SBAコンセプト・境界設定書.md  03.Brain Hot-Swap設定書.md  04.Brain内部構造設定書.md  05.SubSkill体系設定書.md  06.自律学習ループ設定書.md  07.学習ソース・収集方針設定書.md  08.自己実験エンジン設定書.md  09.推論エンジン・VRAM運用設定書.md  10.Brain Package・保存形式設定書.md  11.エクスポート・外部利用仕様書.md  (+5 more)
scripts/: SBAPhase3Verify.ps1  phase0_external_dependency_check.ps1
tests/: conftest.py  integration_test_task_1_1.py  test_blank_template.py  test_brain_list.py  test_brain_manager.py  test_brain_package.py  test_cli_integration.py  test_error_handling.py  test_phase1_integration.py  test_phase2_storage.py  test_phase4.py  test_phase5_single_cycle.py  test_phase_1_final.py  test_phase_comprehensive.py  test_phase_final_validation.py
tools/: run_phase3_tests.ps1
(+96 files in other folders)
