[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sba"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9.2",
    "typer>=0.12.5",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.17.1",
    "kuzu>=0.11.3",
    "sentence-transformers>=3.4.0",
    "playwright>=1.49.0",
]

[project.scripts]
sba = "sba.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]