[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sba"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9.2",
    "typer[all]>=0.12.5",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.0",
    "numpy>=2.0.0",
    "qdrant-client>=1.17.1",
    "kuzu>=0.11.3",
    "sentence-transformers>=3.4.0",
    "ollama>=0.6.0",
    "google-generativeai>=0.8.0",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",
    "aiohttp>=3.10.0",
    "httpx>=0.27.0",
    "duckduckgo-search>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "pdfminer.six>=20221105",
    "pypdf>=4.0.0",
    "arxiv>=2.1.0",
    "feedparser>=6.0.0",
    "yt-dlp>=2024.5.0",
    "faster-whisper>=1.0.0",
    "loguru>=0.7.0",
    "tqdm>=4.66.0",
    "plyer>=2.1.0",
    "playwright>=1.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]

[project.scripts]
sba = "sba.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
